--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,13 +1,11 @@
 .home-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 20px;
+	width: 100vw;
+	height: -webkit-fill-available;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .logo {
-  width: 250px;
+	height: 15%;
 }
