--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,22 @@ body {
 	width: 100vw;
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-		monospace;
+::-webkit-scrollbar {
+	width: 15px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #292929;
+	border-radius: 15px;
+	height: 100px;
+	border: 5px solid transparent;
+	background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: rgba(63, 63, 63, 0.5);
 }
