basic impl of ingredient totals

--- a/src/components/cooking-calculator/CookingCalculator.css
+++ b/src/components/cooking-calculator/CookingCalculator.css
@@ -301,7 +301,7 @@
 }
 
 .ingredient-totals {
-	overflow-y: hidden;
+	overflow-y: auto;
 	overflow-x: hidden;
 	/* height: 100%; */
 	width: -webkit-fill-available;
